force-app/main/default/objects/Exam__c/validationRules/Check_for_correct_rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_correct_rating</fullName>
    <active>true</active>
    <description>Enter value rating</description>
    <errorConditionFormula>OR(Rating__c &lt; 1, Rating__c &gt; 12)</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage>Please enter value from 1 to 12</errorMessage>
</ValidationRule>