force-app/main/default/objects/Exam__c/validationRules/Check_for_discipline.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_discipline</fullName>
    <active>false</active>
    <errorConditionFormula>Discipline__c != NULL</errorConditionFormula>
    <errorMessage>Please enter discipline value</errorMessage>
</ValidationRule>